fixed overflow and padding in login page

--- a/src/components/LoginPage/login.scss
+++ b/src/components/LoginPage/login.scss
@@ -88,6 +88,8 @@ $lighter_grey3: #444444;
     left: 0;
     width: 100%;
     height: 100%;
+    margin: 0px;
+    padding: 0px;
     overflow: hidden;
 }
 
